Closed Bug 889823 Opened 12 years ago Closed 12 years ago

ipc fail to compile using Visual Studio 2013

Categories

(Firefox Build System :: General, defect)

x86
Windows 8
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla25

People

(Reporter: xavier114fch, Assigned: xavier114fch)

References

Details

Attachments

(1 file)

pickle.cc and process_util_win.cc do not compile with Visual Studio 2013. The attached patch add <algorithm> to the include to make them compile.
Attachment #770797 - Flags: review?(benjamin)
Attachment #770797 - Flags: review?(benjamin) → review+
Assignee: nobody → xavier114fch
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Target Milestone: --- → mozilla25
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Blocks: VC12
Product: Core → Firefox Build System
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: