Bug 889823 - ipc fail to compile using Visual Studio 2013 r=bsmedberg