ipc/chromium/src/base/process_util_win.cc
@@ -19,6 +19,8 @@
 #include "base/scoped_ptr.h"
 #include "base/win_util.h"
 
+#include <algorithm>
+
 namespace {
 
 // System pagesize. This value remains constant on x86/64 architectures.
